feat(security): fortified the gates with JWT authentication—no token, no entry! 🛡️🚪🔥
- I know I'm pushing the secret to GitHub
- I know JWT logic is not SOLID
- I know I'm probably going to regret my decisions here
- But I want to work on creating the end-point to actually SIGN-IN and LOG-IN users
- I want to set interfaces for each user role (not based on role but based on CRUD functionality and all..)
- Probably these files will change a lot in the future
- For now Jwt, Security and Love ✌️